Creacion de muñeco

--- a/HangedForm/nbproject/project.properties
+++ b/HangedForm/nbproject/project.properties
@@ -27,10 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/HangedForm.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.gluegen-rt-natives-windows-amd64.jar=F:\\ComputacionGraficaVisual\\TrabajoFinal\\CloneDeHanged\\lib\\gluegen-rt-natives-windows-amd64.jar
+file.reference.gluegen-rt.jar=F:\\ComputacionGraficaVisual\\TrabajoFinal\\CloneDeHanged\\lib\\gluegen-rt.jar
+file.reference.jogl-all-noawt-natives-windows-amd64.jar=F:\\ComputacionGraficaVisual\\TrabajoFinal\\CloneDeHanged\\lib\\jogl-all-noawt-natives-windows-amd64.jar
+file.reference.jogl-all.jar=F:\\ComputacionGraficaVisual\\TrabajoFinal\\CloneDeHanged\\lib\\jogl-all.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.openGllibreriasClase.classpath}
+    ${libs.openGllibreriasClase.classpath}:\
+    ${file.reference.gluegen-rt-natives-windows-amd64.jar}:\
+    ${file.reference.gluegen-rt.jar}:\
+    ${file.reference.jogl-all-noawt-natives-windows-amd64.jar}:\
+    ${file.reference.jogl-all.jar}:\
+    ${libs.openGllibreriaClase.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
