--- a/HangedForm/nbproject/private/private.properties
+++ b/HangedForm/nbproject/private/private.properties
@@ -3,4 +3,4 @@ file.reference.gluegen-rt-natives-windows-amd64.jar=D:\\ComputacionGraficaVisual
 file.reference.gluegen-rt.jar=D:\\ComputacionGraficaVisual\\TrabajoFinal\\HangedForm\\lib\\gluegen-rt.jar
 file.reference.jogl-all-noawt-natives-windows-amd64.jar=D:\\ComputacionGraficaVisual\\TrabajoFinal\\HangedForm\\lib\\jogl-all-noawt-natives-windows-amd64.jar
 file.reference.jogl-all.jar=D:\\ComputacionGraficaVisual\\TrabajoFinal\\HangedForm\\lib\\jogl-all.jar
-user.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Docente\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
