--- a/HangedForm/nbproject/project.properties
+++ b/HangedForm/nbproject/project.properties
@@ -52,7 +52,8 @@ javac.classpath=\
     ${file.reference.gluegen-rt-natives-windows-amd64.jar-1}:\
     ${file.reference.gluegen-rt.jar-1}:\
     ${file.reference.jogl-all-noawt-natives-windows-amd64.jar-1}:\
-    ${file.reference.jogl-all.jar-1}
+    ${file.reference.jogl-all.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
